--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="section-motto">
             <div class="container">
             <h1 class="title">Effective Solutions for Your Business</h1>
-            <button class="button orderservice" type="button">Order Service</button>
+            <button class="button orderservice" type="button" data-modal-open>Order Service</button>
             </div>
         </section>
         <section class="section characteristics">
@@ -394,5 +394,14 @@
         </div>
         </div>
     </footer>
+    <section class="modal-body">
+    <div class="modal-window is-hidden" data-modal>
+    <div class="modal-body">
+        <button type="button" class="closebutton" data-modal-close>X</button>
+    <h2>OKNO MODAL</h2>
+    </div>
+    </div>
+    </section>
+    <script> src="./js/modal.js"</script>
 </body>
 </html>
