--- a/index.html
+++ b/index.html
@@ -394,12 +394,12 @@
         </div>
         </div>
     </footer>
-    <section class="modal-body">
-    <div class="modal-window is-hidden" data-modal>
+    <div class="modal-body is-hidden" data-modal>
+        <div class="modal-window">
+            <h2>OKNO MODAL</h2>
         <button type="button" class="closebutton" data-modal-close>X</button>
-    <h2>OKNO MODAL</h2>
     </div>
-    </section>
+    </div>
     <script> src="./js/modal.js"</script>
 </body>
 </html>
