--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="headcont">
             <a class="link logo" href="./index.html">Web<span class="inheader">Studio</span></a>
             <ul class="list ulnav">
-                <li><a class="link navigation" href="./index.html">Studio</a></li>
+                <li><a class="link navigation-1" href="./index.html">Studio</a></li>
                 <li><a class="link navigation" href="./portfolio.html">Portfolio</a></li>
                 <li><a class="link navigation" href="">Contacts</a></li>
             </ul>
