--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
             </ul>
             <ul class="list ulbuttonpic">
                 <li class="list libuttonpic">
-                    <div class="container-linkoverlay">
+                    <div class="linkoverlay">
                     <a class="link lipic" href=""><img src="./images/img4.jpg" alt="bank application cards" width="360" height="300"></a>
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                         Fruit Ecommerce App ·
