--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,9 @@
             </ul>
             <ul class="list ulbuttonpic">
                 <li class="list libuttonpic">
+                    <a class="link lipic" href="">
                     <div class="linkoverlay">
-                    <a class="link lipic" href=""><img src="./images/img4.jpg" alt="bank application cards" width="360" height="300"></a>
+                    <img src="./images/img4.jpg" alt="bank application cards" width="360" height="300">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                         Fruit Ecommerce App ·
                         Cloud Storage App</p>
@@ -65,11 +66,12 @@
                 </a>  
                 </li>
                 <li class="list libuttonpic">
+                    <a class="link lipic" href="">
                     <div class="linkoverlay">
-                    <a class="link lipic" href=""><img src="./images/img5.jpg" alt="contactless payment by phone" width="360" height="300">
+                    <img src="./images/img5.jpg" alt="contactless payment by phone" width="360" height="300">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                         Fruit Ecommerce App ·
-                        Cloud Storage App</p></a>
+                        Cloud Storage App</p>
                     </div>
                     <div class="appcontainer">
                     <h2 class="link picheader">Cashless Payment</h2>
@@ -78,11 +80,12 @@
                 </a>
                 </li>
                 <li class="list libuttonpic">
+                    <a class="link lipic" href="">
                     <div class="linkoverlay">
-                    <a class="link lipic" href=""><img src="./images/img6.jpg" alt="return to normalcy on laptop and life is in the future on smartphone" width="360" height="300">
+                    <img src="./images/img6.jpg" alt="return to normalcy on laptop and life is in the future on smartphone" width="360" height="300">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                         Fruit Ecommerce App ·
-                        Cloud Storage App</p></a>
+                        Cloud Storage App</p>
                     </div>
                     <div class="appcontainer">
                     <h2 class="link picheader">Meditation App</h2>
@@ -91,11 +94,12 @@
                 </a>
                 </li>
                 <li class="list libuttonpic">
+                    <a class="link lipic" href="">
                     <div class="linkoverlay">
-                    <a class="link lipic" href=""><img src="./images/img7.jpg" alt="hands on the steering wheel in the car and smartphone in the car holder" width="360" height="300">
+                    <img src="./images/img7.jpg" alt="hands on the steering wheel in the car and smartphone in the car holder" width="360" height="300">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                         Fruit Ecommerce App ·
-                        Cloud Storage App</p></a>
+                        Cloud Storage App</p>
                     </div>
                     <div class="appcontainer">
                     <h2 class="link picheader">Taxi Service</h2>
@@ -104,11 +108,12 @@
                 </a>
                 </li>
                 <li class="list libuttonpic">
+                    <a class="link lipic" href="">
                     <div class="linkoverlay">
-                    <a class="link lipic" href=""><img src="./images/img8.jpg" alt="smartphone lock screen and various themes" width="360" height="300">
+                    <img src="./images/img8.jpg" alt="smartphone lock screen and various themes" width="360" height="300">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                         Fruit Ecommerce App ·
-                        Cloud Storage App</p></a>
+                        Cloud Storage App</p>
                     </div>
                     <div class="appcontainer">
                     <h2 class="link picheader">Screen Illustrations</h2>
@@ -117,37 +122,40 @@
                 </a>
                 </li>
                 <li class="list libuttonpic">
+                    <a class="link lipic" href="">
                     <div class="linkoverlay">
-                    <a class="link lipic" href=""><img src="./images/img9.jpg" alt="woman in a gray hat, yellow glasses and a yellow sweater" width="360" height="300">
-                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    <img src="./images/img9.jpg" alt="woman in a gray hat, yellow glasses and a yellow sweater" width="360" height="300">
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                         Fruit Ecommerce App ·
-                        Cloud Storage App</p></a>
+                        Cloud Storage App</p>
                     </div>
                     <div class="appcontainer">
                     <h2 class="link picheader">Online Courses</h2>
                     <p class="link picpar">Marketing</p>
                 </div>
-            </a>
+                </a>
                 </li>
                 <li class="list libuttonpic">
+                    <a class="link lipic" href="">
                     <div class="linkoverlay">
-                    <a class="link lipic" href=""><img src="./images/img10.jpg" alt="smart technologies application" width="360" height="300">
-                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    <img src="./images/img10.jpg" alt="smart technologies application" width="360" height="300">
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                         Fruit Ecommerce App ·
-                        Cloud Storage App</p></a>
+                        Cloud Storage App</p>
                     </div>
                     <div class="appcontainer">
                     <h2 class="link picheader">Instagram Stories Concept</h2>
                     <p class="link picpar">Design</p>
                 </div>
-            </a>
+                </a>
                 </li>
                 <li class="list libuttonpic">
+                    <a class="link lipic" href="">
                     <div class="linkoverlay">
-                    <a class="link lipic" href=""><img src="./images/img11.jpg" alt="woman carrying a bag with vegetables" width="360" height="300">
-                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    <img src="./images/img11.jpg" alt="woman carrying a bag with vegetables" width="360" height="300">
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                         Fruit Ecommerce App ·
-                        Cloud Storage App</p></a>
+                        Cloud Storage App</p>
                     </div>
                     <div class="appcontainer">
                     <h2 class="link picheader">Organic Food</h2>
@@ -156,11 +164,12 @@
                 </a>
                 </li>
                 <li class="list libuttonpic">
+                    <a class="link lipic" href="">
                     <div class="linkoverlay">
-                    <a class="link lipic" href=""><img src="./images/img12.jpg" alt="milk pattern on coffee" width="360" height="300">
-                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    <img src="./images/img12.jpg" alt="milk pattern on coffee" width="360" height="300">
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                         Fruit Ecommerce App ·
-                        Cloud Storage App</p></a>
+                        Cloud Storage App</p>
                     </div>
                     <div class="appcontainer">
                     <h2 class="link picheader">Fresh Coffee</h2>
