--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
                 <a class="link logo" href="./index.html">Web<span class="inheader">Studio</span></a>
                 <ul class="list ulnav">
                     <li><a class="link navigation" href="./index.html">Studio</a></li>
-                    <li><a class="link navigation" href="./portfolio.html">Portfolio</a></li>
+                    <li><a class="link navigation-bar-transition" href="./portfolio.html">Portfolio</a></li>
                     <li><a class="link navigation" href="">Contacts</a></li>
                 </ul>
             </nav>
