--- a/index.html
+++ b/index.html
@@ -399,6 +399,6 @@
         <button type="button" class="closebutton" data-modal-close>X</button>
     </div>
     </div>
-    <script> src="./js/modal.js"</script>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
