--- a/index.html
+++ b/index.html
@@ -396,7 +396,12 @@
     </footer>
     <div class="modal-body is-hidden" data-modal>
         <div class="modal-window">
-        <button type="button" class="closebutton" data-modal-close>X</button>
+        <button type="button" class="closebutton" data-modal-close>
+            <svg class="svg-modal" width="8" height="8" xmlns="http://www.w3.org/2000/svg">
+            <use href="./images/icons.svg#close-black">
+            </use>
+        </svg>
+    </button>
     </div>
     </div>
     <script src="./js/modal.js"></script>
