--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         <div class="modal-window">
         <button type="button" class="closebutton" data-modal-close>
             <svg class="svg-modal" width="8" height="8" xmlns="http://www.w3.org/2000/svg">
-            <use href="./images/icons.svg#close-black">
+            <use href="./images/icon-close-black.svg#icons-close-black">
             </use>
         </svg>
     </button>
